objects/TracHier__History_Log__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Line_Number__c</fullName>
        <label>Line Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__Log_Number__c</fullName>
        <label>Log Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complete Company</label>
        <referenceTo>TracHier__Master_Account__c</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>History Log</label>
    <listViews>
        <fullName>TracHier__Build_Hierarchy_Job_Logs</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>TracHier__Log_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>TracHier__Account__c</columns>
        <columns>TracHier__Type__c</columns>
        <columns>TracHier__Message__c</columns>
        <columns>TracHier__Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_DML_BATCH</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_LINK_BATCH</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_HID_BATCH</value>
        </filters>
        <label>Build Hierarchy Job Logs</label>
    </listViews>
    <listViews>
        <fullName>TracHier__Complete_Company_Logs</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>TracHier__Log_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>TracHier__Account__c</columns>
        <columns>TracHier__Type__c</columns>
        <columns>TracHier__Message__c</columns>
        <columns>TracHier__Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_MA_CREATE</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_MA_UPDATE</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ASYNC_MA</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_MA_DEFAULT_BATCH</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_MA_HIERARCHY_BATCH</value>
        </filters>
        <label>Complete Company Logs</label>
    </listViews>
    <listViews>
        <fullName>TracHier__Install_Upgrade_Logs</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>TracHier__Log_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>TracHier__Type__c</columns>
        <columns>TracHier__Message__c</columns>
        <columns>TracHier__Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>PostInstall</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Setup</value>
        </filters>
        <label>Install and Upgrade Logs</label>
    </listViews>
    <listViews>
        <fullName>TracHier__Process_Logs</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>TracHier__Log_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>TracHier__Account__c</columns>
        <columns>TracHier__Type__c</columns>
        <columns>TracHier__Message__c</columns>
        <columns>TracHier__Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_HID_TRIGGER_BI</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_HID_TRIGGER_AI</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ERROR_HID_TRIGGER_BU</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ASYNC_MA</value>
        </filters>
        <label>Process Logs</label>
    </listViews>
    <listViews>
        <fullName>TracHier__Rollup_Logs</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>TracHier__Log_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>TracHier__Master_Account__c</columns>
        <columns>TracHier__Type__c</columns>
        <columns>TracHier__Message__c</columns>
        <columns>TracHier__Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>TracHier.EagerRollerUpper</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>TracHier.RollupService</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>MA_ROLLUP</value>
        </filters>
        <label>Rollup Logs</label>
    </listViews>
    <listViews>
        <fullName>TracHier__Subscription_Logs</fullName>
        <columns>TracHier__Log_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>TracHier__Type__c</columns>
        <columns>TracHier__Message__c</columns>
        <columns>TracHier__Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>SUBSCRIPTIONS</value>
        </filters>
        <label>Subscription Logs</label>
    </listViews>
    <nameField>
        <label>History Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>